# sdelib

./: .gitignore  COMPARISON.md  README.md  __init__.py  base.py  example.py  models.py  paths.py  processes.py  pyproject.toml  schedules.py  simulators.py  trainers.py
tests/: test_paths.py  test_schedules.py  test_simulators.py  test_trainers_and_models.py
